--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,18 @@
 ﻿<Window x:Class="FileWork.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FileWork"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="File Viewer" Height="350" Width="500">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
+        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
+        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
+        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
+        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
     </Grid>
 </Window>
