--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="FileWork.MainWindow"
+﻿<Window x:Class="ArrayToFile.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="File Viewer" Height="350" Width="500">
+        Title="Array to File" Height="350" Width="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -10,9 +10,9 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
-        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
-        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
-        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
+        <Label Grid.Row="0" Content="Введіть елементи масиву через кому (наприклад, 1,2,3):"/>
+        <TextBox x:Name="ArrayInputTextBox" Grid.Row="1"/>
+        <Button x:Name="SaveToFileButton" Grid.Row="2" Content="Зберегти в файл" Click="SaveToFileButton_Click"/>
+        <Label x:Name="StatusMessageLabel" Grid.Row="3"/>
     </Grid>
 </Window>
