--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,20 @@
-﻿<Window x:Class="FileWork.MainWindow"
+﻿<Window x:Class="ArrayToFile.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="File Viewer" Height="350" Width="500">
-    <Grid>
+        Title="Array to File" Height="350" Width="500">
+    <Grid Background="#F0F0F0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
-        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
-        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
-        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
+        <Label Grid.Row="0" Content="Введіть елементи масиву через кому (наприклад, 1,2,3):" Margin="10"/>
+        <TextBox x:Name="ArrayInputTextBox" Grid.Row="1" Margin="10"/>
+        <Button x:Name="SaveToFileButton" Grid.Row="2" Content="Зберегти в файл" Click="SaveToFileButton_Click" HorizontalAlignment="Left" Margin="10" Padding="10,5" Background="#007ACC" Foreground="White"/>
+        <Button x:Name="LoadFromFileButton" Grid.Row="3" Content="Завантажити з файлу" Click="LoadFromFileButton_Click" HorizontalAlignment="Left" Margin="10" Padding="10,5" Background="#007ACC" Foreground="White"/>
+        <Label x:Name="StatusMessageLabel" Grid.Row="4" Foreground="Green" FontWeight="Bold" Margin="10" VerticalAlignment="Center"/>
     </Grid>
 </Window>
