--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,15 @@
-﻿<Window x:Class="FileWork.MainWindow"
+﻿<Window x:Class="RandomNumbers.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="File Viewer" Height="350" Width="500">
-    <Grid>
+        Title="Random Numbers" Height="350" Width="500">
+    <Grid Background="#F0F0F0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
-        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
-        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
-        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
+        <Button Content="Генерувати числа" Click="GenerateNumbers_Click" HorizontalAlignment="Center" Margin="5" Padding="10,5" Background="#007ACC" Foreground="White" FontSize="14"/>
+        <ListBox x:Name="StatisticsListBox" Grid.Row="1" Margin="5" Background="White" BorderBrush="#007ACC" BorderThickness="1" FontSize="14"/>
     </Grid>
 </Window>
+
