--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,17 @@
-﻿<Window x:Class="FileWork.MainWindow"
+﻿<Window x:Class="FileSearch.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="File Viewer" Height="350" Width="500">
+        Title="File Search" Height="350" Width="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
-        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
-        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
-        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
+        <TextBox x:Name="SearchTextBox" Grid.Row="0" Margin="5" Padding="5" Width="300" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button Content="Пошук слова" Grid.Row="0" Margin="5" Padding="5" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center" Click="SearchButton_Click"/>
+        <TextBlock x:Name="ResultTextBlock" Grid.Row="1" Margin="5" Padding="5"/>
     </Grid>
 </Window>
