--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,21 @@
-﻿<Window x:Class="FileWork.MainWindow"
+﻿<Window x:Class="FileStatistics.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="File Viewer" Height="350" Width="500">
+        Title="File Statistics" Height="350" Width="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
-        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
-        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
-        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
+        <Label Content="Шлях до файлу:" Grid.Row="0" Margin="5"/>
+        <TextBox x:Name="FilePathTextBox" Grid.Row="1" Margin="5" Padding="5"/>
+        <Button Content="Аналізувати файл" Grid.Row="2" Margin="5" Padding="5" Click="AnalyzeFile_Click"/>
+        <TextBlock x:Name="StatisticsTextBlock" Grid.Row="3" Margin="5" Padding="5"/>
     </Grid>
 </Window>
