--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="FileWork.MainWindow"
+﻿<Window x:Class="FileInteraction.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="File Viewer" Height="350" Width="500">
-    <Grid>
+        Title="File Interaction" Height="350" Width="500">
+    <Grid Background="#f2f2f2">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
-        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
-        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
-        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
+        <Label Content="Натисніть, щоб згенерувати числа:" Grid.Row="0" Margin="5"/>
+        <Button x:Name="GenerateNumbersButton" Content="Генерувати числа" Grid.Row="0" Margin="5" Padding="5" Click="GenerateNumbersButton_Click" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#007acc" Foreground="White" BorderThickness="0" Cursor="Hand"/>
+        <Border Grid.Row="1" Margin="5" Padding="5" Background="White" BorderBrush="#007acc" BorderThickness="1" CornerRadius="5">
+            <TextBlock x:Name="StatisticsTextBlock" Margin="5"/>
+        </Border>
     </Grid>
 </Window>
