--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,23 @@
-﻿<Window x:Class="FileWork.MainWindow"
+﻿<Window x:Class="ModeratorApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="File Viewer" Height="350" Width="500">
+        Title="Модератор" Height="350" Width="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Введіть шлях до файлу:"/>
-        <TextBox x:Name="FilePathTextBox" Grid.Row="1"/>
-        <Button x:Name="ViewFileButton" Grid.Row="2" Content="Переглянути файл" Click="ViewFileButton_Click"/>
-        <TextBlock x:Name="FileContentTextBox" Grid.Row="3" TextWrapping="Wrap"/>
+        <Label Content="Шлях до файлу з текстом:" Grid.Row="0" Margin="5"/>
+        <TextBox x:Name="TextFilePathTextBox" Grid.Row="0" Margin="5" Padding="5" Width="300" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Content="Шлях до файлу зі словами для модерації:" Grid.Row="1" Margin="5"/>
+        <TextBox x:Name="ModerationWordsFilePathTextBox" Grid.Row="1" Margin="5" Padding="5" Width="300" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Button Content="Модерувати" Grid.Row="2" Margin="5" Padding="10" Click="ModerateButton_Click" HorizontalAlignment="Center" Background="#007acc" Foreground="White" BorderThickness="0" Cursor="Hand"/>
+        <Border Grid.Row="3" Margin="5" Padding="10" Background="White" BorderBrush="#007acc" BorderThickness="1" CornerRadius="5">
+            <TextBlock x:Name="ResultTextBlock" Margin="5"/>
+        </Border>
     </Grid>
 </Window>
